di ubah sedikit

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </style>
 </head>
 <body>
-  <h1>Pengingat Utang Puasa Jane perBulan</h1>
+  <h1>Pengingat Utang Puasa perBulan</h1>
 
   <div id="container"></div>
 
